Bug 57708 - FILEOPEN: Crystal reports RTF missing picture and wrong pagination
Summary: FILEOPEN: Crystal reports RTF missing picture and wrong pagination
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.0.0 target:3.6.5
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-11-29 22:43 UTC by Vlado Koval
Modified: 2025-06-11 14:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vlado Koval 2012-11-29 22:43:59 UTC
Hi there,

Original post:
http://nabble.documentfoundation.org/Crystal-reports-RTF-missing-picture-and-wrong-pagination-td4021605.html
---------------------
On Thu, Nov 29, 2012 at 6:42 PM, vlakov <[hidden email]> wrote:
> LibreOffice is great. It is very nice to have free Office suite. Thank you
> for your effort.
> But for now it is unusable for us. What worked in the past in OpenOffice now
> it is broken altogether in LibreOffice.  We use OpenOffice that yields more
> reliable/stable result - RTF documents generated with Crystal reports. In
LibreOffice 3.4 it worked OK.
Please, see the attachemets.
LibreOffice 3.6.3.2 (also tried prerelease 3.6.4.1 - wrong - missing picture and wrong pagination
OpenOffice 3.4.1 - works OK
Microsoft Word 2000 - works OK
-----------
Here is RTF document:
http://nabble.documentfoundation.org/file/n4021605/KOV9332012-11-29-01_35_21_643000.zip
-----------
Results of rendering of the RTF document attached above in different programs:
OpenOffice.PNG:
http://nabble.documentfoundation.org/file/n4021605/OpenOffice.PNG
-----------
Microsoft-Word.PNG:
http://nabble.documentfoundation.org/file/n4021605/Microsoft-Word.PNG
----------
LibreOffice-RTF.PNG
http://nabble.documentfoundation.org/file/n4021605/LibreOffice-RTF.PNG
----------------
Andras Timar:
Could you please report this bug to bugzilla.freedesktop.org? Please
attach these attachments there, set the regression keyword as well,
and put Miklos Vajna in CC. RTF regressions are usually fixed very
fast, it can be fixed until 4.0 release. No bug report - no fix,
sorry. Bugreporting does not work via mail.

Thanks in advance,

Andras Timar
Comment 1 Roman Eisele 2012-11-30 11:38:38 UTC
Thank you for your bug report!

Confirmed. REPRODUCIBLE since LibreOffice 3.5.0 (regression) and still reproducible with the latest daily builds. On all platforms.

Miklós, you are already in the CC list -- please take over ;-)
Comment 2 Miklos Vajna 2012-11-30 16:24:24 UTC
Right, I'll fix this in a bit. There are two problems here:

The two pages are caused by the continuous section break in the middle of the document, the importer for some reason threats the second section as a normal (non-continuous one), so it creates a page break.

The missing picture is because the picture is right before a textframe, and there is a "paragraph reset" between the two. Strictly speaking, I think we should discard the image, as the anchored image is a paragraph property, but seeing nobody does that, let's mimic the Word bug. :-)
Comment 3 Not Assigned 2012-11-30 16:30:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b836bf389d1150c9cafbb0aefa641af2316e536c

fdo#57708 fix fake page break problem during RTF import



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Not Assigned 2012-11-30 16:31:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8063e36115a11ddf3db05928db9287947beee74d

fdo#57708 fix RTF import of pictures right before text frames



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Not Assigned 2012-11-30 16:31:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7baca04727fbd3297c6e4b9815bf2a4695175e2e

fdo#57708 testcase



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Miklos Vajna 2012-12-01 10:43:31 UTC
Resolved in master, -3-6 reviews:

https://gerrit.libreoffice.org/1214
https://gerrit.libreoffice.org/1215
Comment 7 Not Assigned 2012-12-01 20:52:46 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d179886a223c11afb0c4ecc1db0ef10a9e3f9e7&g=libreoffice-3-6

fdo#57708 fix fake page break problem during RTF import


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Not Assigned 2012-12-01 20:53:04 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fb17de573c582eca7548bf8cd0a0ea86cfad17df&g=libreoffice-3-6

fdo#57708 fix RTF import of pictures right before text frames


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Roman Eisele 2012-12-13 08:39:51 UTC
VERIFIED as FIXED on Mac OS X (10.6.8 Intel) with

  Version 4.0.0.0.beta1 (Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)
  TinderBox: MacOSX TDF Release, Branch:libreoffice-4-0,
  Time: 2012-12-05_22:13:37

i.e. the official 4.0beta1. Checking Vlado Koval’s sample RTF file shows that the picture is now imported and the pagination correct. (I am not sure if there is not a little problem with the vertical position of the picture; but this is a different and minor issue.)


@ Miklós:
Thank you very much for fixing this bug, or better: “MS Word interoperability issue” ;-)
Comment 10 Robinson Tryon (qubit) 2015-12-17 12:08:52 UTC Comment hidden (obsolete)