fdo#57708 fix fake page break problem during RTF import

The core of this change is: so far the continous section break at the
end of the document was sent as a normal section break. This was
introduced in commit 892d33c8d5033b4f8f7889bf91d257f55adf0e1f, probably
as a workaround (sadly it's not documented and I no longer remember).
Don't do this, since it causes additional page breaks during import.
Instead, fix properly whatever was broken after getting rid of this
workaround.

Change-Id: I28c372d539c150fe21ff9db31209f9935a5e9063