writerfilter/source/rtftok/rtfdocumentimpl.hxx
@@ -487,8 +487,8 @@ namespace writerfilter {
                 void replayBuffer(RTFBuffer_t& rBuffer);
                 /// If we have some unicode or hex characters to send.
                 void checkUnicode(bool bUnicode = true, bool bHex = true);
-                /// If we have a pending continous section break.
-                void checkDeferredContSectBreak();
+                /// If we need a final section break at the end of the document.
+                void setNeedSect(bool bNeedSect = true);
 
                 uno::Reference<uno::XComponentContext> const& m_xContext;
                 uno::Reference<io::XInputStream> const& m_xInputStream;
@@ -581,7 +581,12 @@ namespace writerfilter {
                 rtl::OStringBuffer m_aHexBuffer;
                 /// Formula import.
                 oox::formulaimport::XmlStreamBuilder m_aMathBuffer;
-                bool m_bDeferredContSectBreak;
+                /// If the next continous section break should be ignored.
+                bool m_bIgnoreNextContSectBreak;
+                /// If a section break is needed before the end of the doc (false right after a section break).
+                bool m_bNeedSect;
+                /// If aFrame.inFrame() was true in the previous state.
+                bool m_bWasInFrame;
         };
     } // namespace rtftok
 } // namespace writerfilter
